add a deno fmt. task lint throwing a fit where it shouldn't, ignore.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -2059,8 +2059,8 @@
     --bs-body-bg-rgb: #lib.rgbify(@base);
     --bs-gradient: linear-gradient(
       180deg,
-      fade(@base, 0),
-      fade(@text, 0)
+      fade(@base, 0%),
+      fade(@text, 0%)
     );
     --bs-body-color: @text;
     --bs-body-bg: @base;
