Further support for mailing lists site.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -16,7 +16,7 @@
 ==/UserStyle== */
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
-@import "https://userstyles.catppuccin.com/lib/mediawiki.less";
+@import "http://127.0.0.1:8000/catppuccin-styles/userstyles/lib/mediawiki.less";
 
 /// General Mixins
 #mixins {
@@ -231,6 +231,7 @@
         border-color: @overlay0 !important;
 
         > th {
+          color: @text !important;
           background-color: @mantle !important;
           border-color: @overlay0 !important;
         }
@@ -2178,6 +2179,22 @@
         color: @overlay0 !important;
         background-color: @mantle !important;
       }
+    }
+
+    .fa {
+      color: inherit !important;
+    }
+
+    .chart-data .bars rect {
+      fill: @accent;
+    }
+
+    .all-lists table.lists .list-tags {
+      color: @subtext0;
+    }
+
+    .all-lists table.lists tr.list:hover {
+      color: inherit;
     }
   }
 }
