Fix specifications pages.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/freedesktop/catppuccin.user.less
+++ b/styles/freedesktop/catppuccin.user.less
@@ -32,9 +32,25 @@
     #lib.palette();
     #lib.defaults();
 
+    * {
+      text-decoration-color: inherit !important;
+    }
+
+    img[src="static/images/logo.svg"] {
+      @svg: escape(
+        '<svg xmlns="http://www.w3.org/2000/svg" width="182.961" height="131.25" viewBox="0 0 146.369 105"><path d="M6.529 89.887q-.274-.094-.74-.142a8 8 0 0 0-.807-.047q-.565 0-.852.289-.288.288-.288.892v.929h1.783v1.858H3.842v8.26H.954v-8.26H0v-1.858h.954v-1.3q0-1.365.939-2.292.938-.928 2.343-.928.707 0 1.345.118.636.118.947.277zm7.35 4.959q-.273-.219-.767-.386t-1.163-.167q-.782 0-1.318.23t-.895.568v6.835H6.848V91.808l2.888-.201v.998l.913-.564a4.3 4.3 0 0 1 .975-.436q.55-.174 1.012-.174.49 0 .786.06t.457.137zm11.28 2.46H17.65q.235 1.226.973 1.768t1.791.542q.846 0 1.871-.25 1.025-.249 1.617-.653v2.56q-.556.395-1.672.624-1.116.23-1.794.23-2.685 0-4.192-1.463t-1.507-3.92q0-2.474 1.54-3.994t3.844-1.52 3.676 1.625q1.369 1.626 1.36 4.451zm-2.662-1.355q-.215-1.133-.866-1.71t-1.615-.575q-1.125 0-1.697.623-.571.623-.693 1.662zm14.055 1.355h-7.508q.235 1.226.973 1.768t1.791.542q.846 0 1.871-.25 1.025-.249 1.617-.653v2.56q-.556.395-1.671.624-1.117.23-1.795.23-2.684 0-4.192-1.463t-1.507-3.92q0-2.474 1.54-3.994t3.844-1.52 3.676 1.625q1.369 1.626 1.36 4.451zm-2.662-1.355q-.215-1.133-.866-1.71t-1.616-.575q-1.124 0-1.696.623t-.693 1.662zm13.687 5.975h-2.184l-.628-.904-1.517.824q-.19.103-.547.155-.359.051-.622.051-2.226 0-3.38-1.5-1.156-1.499-1.164-3.763-.01-2.452 1.389-3.905t3.697-1.452q.66 0 1.158.103a3.3 3.3 0 0 1 .962.367v-4.438h2.837zm-2.837-3.088v-4.5q-.236-.295-.783-.509t-1.187-.214q-1.19 0-1.769.697-.58.696-.58 2.21 0 1.545.618 2.307t1.674.762q.679 0 1.193-.224.514-.223.834-.53zm14.974-1.532h-7.507q.235 1.226.973 1.768t1.79.542q.846 0 1.871-.25 1.025-.249 1.617-.653v2.56q-.556.395-1.671.624-1.117.23-1.795.23-2.685 0-4.192-1.463t-1.506-3.92q0-2.474 1.539-3.994t3.845-1.52 3.675 1.625q1.37 1.626 1.36 4.451zm-2.661-1.355q-.216-1.133-.867-1.71t-1.615-.575q-1.125 0-1.696.623-.572.623-.693 1.662zm11.844 2.506q0 1.657-1.185 2.663t-2.936 1.007q-.818 0-1.961-.165t-2.028-.638v-2.536q.697.39 1.582.672t2.053.282q.838 0 1.35-.242.514-.24.514-.873 0-.414-.433-.673t-1.505-.353q-1.918-.16-2.69-.932t-.77-2.07q0-1.467 1.181-2.418t2.905-.95q.753 0 1.61.136t1.46.34v2.562a7.5 7.5 0 0 0-1.503-.495q-.748-.158-1.614-.158-.697 0-1.088.236-.39.236-.39.55 0 .574.554.757t1.164.222q1.86.122 2.795.922t.934 2.154zm11.406 3.47h-3.445l-2.833-4.447-.602.56v3.887h-2.888V87.464h2.888v7.802l3.884-3.885 1.916 1.28-3.088 2.86zm5.718-1.758-2.097 1.958q-1.299-.537-1.949-1.569-.65-1.031-.65-2.464v-4.428h-.954v-1.858h.955v-3.34l2.887-.2v3.54h1.507v1.858h-1.507v3.619q0 1.084.49 1.8t1.318 1.083zm11.34-3.49q0 2.494-1.43 3.97-1.428 1.478-3.919 1.478-2.678 0-4.013-1.487-1.334-1.486-1.334-3.961 0-2.25 1.437-3.849 1.439-1.6 3.91-1.6 2.481 0 3.915 1.478t1.433 3.971zm-2.913 0q0-1.228-.645-2.183t-1.785-.956q-1.31 0-1.875.871t-.566 2.268q0 1.302.679 2.22t1.818.918q1.271 0 1.823-.745.55-.745.551-2.394zm14.682-.086q0 2.344-1.437 3.863t-3.492 1.52a7 7 0 0 1-1.296-.112q-.589-.112-.956-.29v3.416h-2.837V91.808l2.715-.201.147.6.96-.472a8 8 0 0 1 .82-.353q.358-.127.847-.127 2.08 0 3.305 1.511t1.224 3.826zm-2.888.13q0-1.242-.65-2.15-.652-.907-1.794-.907-.755 0-1.189.238-.434.24-.66.496v4.764q.226.261.755.42.528.158 1.17.158 1.217 0 1.793-.767t.575-2.252m8.01 5.203h-2.988v-3.063h2.988zm12.833-5.247q0 2.494-1.429 3.97-1.428 1.478-3.919 1.478-2.678 0-4.013-1.487-1.335-1.486-1.335-3.961 0-2.25 1.438-3.849t3.91-1.6q2.481 0 3.915 1.478t1.433 3.971m-2.912 0q0-1.228-.645-2.183t-1.786-.956q-1.31 0-1.874.871t-.566 2.268q0 1.302.678 2.22t1.819.918q1.271 0 1.823-.745.55-.745.55-2.394zm11.694-1.833q-.273-.219-.767-.386t-1.163-.167q-.782 0-1.319.23t-.894.568v6.835h-2.888V91.808l2.888-.201v.998l.913-.564a4.3 4.3 0 0 1 .975-.436q.55-.174 1.012-.174.49 0 .786.06t.457.137zm10.501 5.796q0 .95-.361 1.708a4.1 4.1 0 0 1-.953 1.294 5.4 5.4 0 0 1-1.287.865q-.705.338-1.344.49l-2.507-.01v-1.63q2.15 0 2.895-.42t.745-1.414v-.715l-1.008.678a1.8 1.8 0 0 1-.66.263 3.6 3.6 0 0 1-.696.076q-2.13 0-3.297-1.427-1.168-1.426-1.168-3.884 0-2.288 1.366-3.761t3.44-1.474q.678 0 1.385.23a3.8 3.8 0 0 1 1.291.724l1.557-.602.602.176zm-2.737-2.061v-4.036a1.9 1.9 0 0 0-.627-.622q-.385-.232-1.05-.232-1.246 0-1.78.78t-.535 1.806q0 1.364.553 2.239t1.678.874q.572 0 1.04-.216t.722-.594z" style="fill:@{subtext0};fill-rule:nonzero;stroke:none"/><g style="fill:@{base};fill-rule:nonzero;stroke:@{accent};stroke-width:2.45880008;stroke-miterlimit:4"><path d="M85.277 40.796c2.058 7.884-2.667 15.942-10.551 17.999L27.143 71.21c-7.884 2.057-15.943-2.667-18-10.552l-7.448-28.55c-2.057-7.884 2.667-15.942 10.551-17.999L59.83 1.695c7.884-2.057 15.942 2.667 17.999 10.551z" style="stroke:@{subtext0}" transform="translate(29.698 .022)"/><path d="M80.444 39.778c1.749 7.854-1.816 13.621-9.504 15.447l-42.236 11.02c-7.569 2.396-14.089-1.181-15.838-8.836L6.53 33.127c-1.749-8.145.709-12.889 9.503-15.447L58.27 6.661c8.144-1.826 14.089 1.363 15.838 8.835z" style="fill:@{accent};stroke:none" transform="translate(29.698 .022)" stroke="none"/><path d="M45.542 51.793 24.104 31.102l38.1-4.393z" style="opacity:.5;fill:none;stroke:@{text}" transform="translate(29.698 .022)"/><path d="M102.023 28.791a2.903 2.903 0 0 1-2.075 3.541l-12.331 3.217a2.904 2.904 0 0 1-3.542-2.076l-2.295-8.801a2.903 2.903 0 0 1 2.076-3.542l12.33-3.217a2.903 2.903 0 0 1 3.542 2.076zm-35.815 4.856a3.56 3.56 0 0 1-2.545 4.34L48.551 41.93a3.557 3.557 0 0 1-4.34-2.544L41.397 28.6a3.56 3.56 0 0 1 2.544-4.34l15.113-3.942a3.557 3.557 0 0 1 4.34 2.544zM82.191 53.23a1.993 1.993 0 0 1-1.425 2.432l-8.468 2.208a1.993 1.993 0 0 1-2.431-1.426l-1.577-6.043a1.995 1.995 0 0 1 1.425-2.432l8.468-2.209a1.994 1.994 0 0 1 2.431 1.426l1.577 6.043z" style="fill:@{base}"/></g></svg>'
+      );
+      content: url("data:image/svg+xml,@{svg}");
+    }
+
+    ul,
     body {
-      background-color: @base;
       color: @text;
+      background-color: @base;
+    }
+
+    [style="color: #ff3c00;"] {
+      color: @red !important;
     }
 
     #content h1,
@@ -46,9 +62,141 @@
       color: @accent;
     }
 
+    // NUMERIC ELEMENTS
+    .number,
+    #_bubble-toc .number,
+    .subtitle {
+      color: @subtext0;
+    }
+
+    // LINKS AND SPECIAL LINKS
+    a,
+    .crumbs > a,
+    .permalink,
+    .report-bug,
+    .name,
+    h2,
+    div.version-info,
+    .nav-link,
+    ol.procedure,
+    ol.orderedlist,
+    .top-button,
+    .ulink,
+    .link,
+    .xref,
+    .email {
+      color: @blue;
+
+      .nav-label, .number {
+        color: @blue;
+      }
+
+      &::after {
+        filter: @accent-filter;
+      }
+
+      &:hover {
+        color: @sky;
+
+        .nav-label, .number {
+          color: @sky;
+        }
+
+        &::after {
+          filter: @accent-filter;
+        }
+      }
+
+      &:active, &:focus {
+        color: @sapphire;
+
+        .nav-label, .number {
+          color: @sapphire;
+        }
+
+        &::after {
+          filter: @accent-filter;
+        }
+      }
+
+      &:visited {
+        color: @lavender;
+
+        .nav-label, .number {
+          color: @lavender;
+        }
+
+        &::after {
+          filter: @accent-filter;
+        }
+      }
+    }
+
+    // BUTTONS
+
+    .bottom-button {
+      color: @text;
+      background-color: @surface0;
+      border-color: @overlay0;
+
+      &::before {
+        border-color: @overlay0;
+      }
+
+      &:hover {
+        background-color: @surface1;
+      }
+
+      &:active, &:focus {
+        background-color: @surface2;
+      }
+    }
+
+    // INLINE CODE
+    :not(.verbatim-wrap) code,
+    .command,
+    .package {
+      color: @subtext1;
+      background-color: @surface0;
+      border-color: @overlay0;
+    }
+
+    // CODEBLOCKS AND OTHER PRES
+    pre, .verbatim-wrap, .verbatim-wrap :is(pre, code) {
+      color: @subtext1;
+      background-color: @mantle;
+      border-color: @overlay0;
+    }
+
+    .verbatim-wrap .command {
+      color: @accent;
+    }
+
+    .admonition h6 code {
+      border-color: @overlay0;
+    }
+
+    #_header .single-crumb {
+      color: @blue;
+      background-color: inherit;
+      border-color: @overlay0;
+
+      &:hover {
+        color: @sky;
+      }
+
+      &:active, &:focus {
+        color: @sapphire;
+      }
+
+      &:visited {
+        color: @lavender;
+      }
+    }
+
     .pageheader {
       background-color: @mantle;
-      border-color: @crust;
+      border-color: @overlay0;
       color: @subtext1;
     }
 
@@ -61,10 +209,16 @@
 
     input#searchbox {
       color: @subtext1;
-      background-color: @overlay0;
-      border-color: @overlay1;
+      background-color: @surface0;
+      border-color: @overlay0;
       box-shadow: none;
-      &:focus {
+
+      &:hover {
+        background-color: @surface1;
+      }
+
+      &:active, &:focus {
+        background-color: @surface2;
         border-color: @accent;
         outline-color: none;
         outline-style: none;
@@ -75,36 +229,378 @@
       color: @subtext1;
     }
 
-    a:link {
-      color: @blue;
+    hr {
+      border-color: @overlay0;
     }
 
-    a:visited {
-      color: @lavender;
-    }
-    code {
-      background-color: @crust;
-      color: @text;
-    }
-
-    pre {
+    .topnav {
+      border-color: @overlay0;
       background-color: @mantle;
-      border-color: @surface0;
+    }
 
-      code {
-        background-color: @mantle;
-        color: @text;
+    table, .table, .informaltable {
+      * {
+        border-color: @overlay0;
+      }
+
+      tr {
+        &:nth-child(2n+1) {
+          background-color: @surface0;
+        }
+
+        &:nth-child(2n) {
+          background-color: @surface1;
+        }
+
+        &:hover {
+          background-color: @surface2;
+        }
       }
     }
 
-    hr {
-      border-style: solid;
-      border-color: @surface1;
+    /* PAGE BOILERPLATE AND NAVIGATION */
+
+    #_content {
+      background-image: unset !important;
     }
 
-    .topnav, tr:nth-child(2n+1) {
-      border-color: @surface0;
+    #_white-bg {
+      background-color: @crust;
+    }
+
+    #_logo span {
+      color: @subtext0;
+    }
+
+    .crumbs > span {
+      color: @subtext0;
+    }
+
+    /* Language and Format Pickers */
+
+    .bubble h6 {
+      color: @text;
+      border-color: @overlay0;
+    }
+
+    /* Toolbar */
+
+    #_toolbar-wrap {
+      background-color: @accent;
+
+      .tool-label {
+        color: @base;
+      }
+    }
+
+    /* Fixed Header */
+
+    .inactive #_toc-area-button,
+    .inactive #_find-area-button,
+    .nav-inner > a.tool-spacer {
+      &:hover {
+        background-color: fade(@overlay2, 30%);
+      }
+
+      &:active, &:focus {
+        background-color: fade(@overlay2, 60%);
+      }
+    }
+
+    .active > .tool {
+      background-color: fade(@overlay2, 30%);
+    }
+
+    .bubble-corner {
+      border-color: transparent transparent @surface0;
+    }
+
+    .bubble {
+      background-color: @surface0;
+    }
+
+    #_bubble-toc > ol {
+      background-color: #333;
+      border-color: @overlay0;
+    }
+
+    #_toc-area > .bubble a,
+    #_find-area > bubble a,
+    #_fixed-header-wrap > .bubble a,
+    #_toc-bubble-wrap > .bubble a {
+      color: @text;
+    }
+
+    #_bubble-toc .active ol {
+      background-color: fade(@accent, 30%);
+      border-color: @overlay0;
+    }
+
+    #_bubble-toc .inactive:hover,
+    #_bubble-toc .inactive a:hover {
+      color: @text;
+      background-color: fade(@overlay2, 30%);
+    }
+
+    #_bubble-toc .active,
+    #_bubble-toc .active > a {
+      color: @base;
+      background-color: @accent;
+    }
+
+    .bubble a {
+      &:hover {
+        background-color: fade(@accent, 20%);
+      }
+
+      &:focus, &:active {
+        background-color: fade(@accent, 40%);
+      }
+    }
+
+    #_find-input {
+      background-color: @base;
+      border-color: @accent;
+
+      &:active, &:focus {
+        border-color: darken(@accent, 10%);
+      }
+    }
+
+    #_find-input-label {
+      color: @subtext0;
+    }
+
+    /* Smaller, fixed header */
+
+    #_fixed-header-wrap {
       background-color: @mantle;
+      border-color: @overlay0;
+    }
+
+    #_fixed-header a.single-crumb:hover .single-contents-icon {
+      filter: @text-filter;
+    }
+
+    #_fixed-header :is(.single-contents-icon, .prev-icon, .next-icon) {
+      filter: @subtext0-filter;
+
+      &:hover {
+        filter: @text-filter;
+      }
+    }
+
+    /* Page bottom */
+
+    #_bottom-navigation {
+      border-color: @overlay0;
+    }
+
+    .nav-label {
+      color: @subtext0;
+    }
+
+    #_share-in:before {
+      border-color: @overlay0;
+    }
+
+    #_share-in:before {
+      background-color: @accent;
+    }
+
+    // FOOTER
+    #_footer-wrap {
+      background-color: @mantle;
+    }
+
+    #_footer a {
+      color: @text;
+
+      &:hover {
+        color: darken(@accent, 5%);
+      }
+
+      &:active, &:focus {
+        color: darken(@accent, 5%);
+      }
+    }
+
+    #_footer > p {
+      color: @subtext0;
+    }
+
+    [id]:target > span,
+    .admonition[id]:target > h6 {
+      background-color: fade(@accent, 30%);
+    }
+
+    h6.version-info {
+      color: @base;
+      background-color: @accent;
+    }
+
+    #_bubble-toc .name {
+      color: @text;
+    }
+
+    .line {
+      border-color: @overlay0;
+    }
+
+    .legalnotice p,
+    .legalnotice td {
+      color: @subtext0;
+    }
+
+    .note {
+      border-color: @teal;
+      background-color: fade(@teal, 30%);
+    }
+
+    .note ul,
+    .note .orderedlist,
+    .warning ul,
+    .warning .orderedlist {
+      color: @subtext0;
+    }
+
+    .important {
+      border-color: @peach;
+      background-color: fade(@peach, 30%);
+    }
+
+    .important ul,
+    .important .orderedlist {
+      color: @peach;
+    }
+
+    .warning {
+      border-color: @red;
+      background: fade(@red, 30%);
+    }
+
+    .note > h6 {
+      color: @teal;
+    }
+
+    .important > h6 {
+      color: @peach;
+    }
+
+    .warning > h6 {
+      color: @red;
+    }
+
+    p {
+      color: @text;
+    }
+
+    .abstract p,
+    .toc-title {
+      color: @subtext0;
+    }
+
+    .authorgroup,
+    .editor,
+    .date {
+      color: @subtext0;
+    }
+
+    .screen,
+    .programlisting,
+    .userinput {
+      color: @subtext0;
+    }
+
+    .complex-example .example-contents {
+      border-color: @overlay0;
+      background-color: @mantle;
+    }
+
+    .variablelist dt {
+      color: @text;
+    }
+
+    a:hover code,
+    a:focus code,
+    a:active code,
+    a:hover .literal,
+    a:focus .literal,
+    a:active .literal,
+    a:hover .package,
+    a:focus .package,
+    a:active .package {
+      border-color: @accent;
+    }
+
+    .procedure-contents {
+      background-color: @mantle;
+      border-color: @overlay0;
+    }
+
+    ol.procedure .title {
+      color: @subtext0;
+    }
+
+    .question,
+    .question code,
+    .question .literal,
+    .question .package {
+      color: @subtext0;
+    }
+
+    .js-on .question:hover,
+    .js-on .question:focus,
+    .js-on .active .question {
+      color: @text;
+    }
+
+    .js-on .question:hover code,
+    .js-on .question:focus code,
+    .js-on .active .question code,
+    .js-on .question:hover .literal,
+    .js-on .question:focus .literal,
+    .js-on .active .question .literal,
+    .js-on .question:hover .package,
+    .js-on .question:focus .package,
+    .js-on .active .question .package {
+      color: @subtext0;
+    }
+
+    /* Review features */
+    .doc-status {
+      background-color: @mantle;
+      color: @text;
+    }
+
+    .doc-status li {
+      color: @text;
+    }
+
+    #_find-area {
+      background-color: @accent;
+    }
+
+    #_nav-area {
+      border-color: @overlay0;
+    }
+
+    #_bubble-toc ol,
+    #_bubble-toc .active ol {
+      background-color: @surface0;
+    }
+    #_toc-area .bubble h6 {
+      background-color: @surface0;
+    }
+    #_toc-bubble-wrap {
+      background-color: @surface0;
+    }
+    #_footer a {
+      border-color: @overlay0;
+    }
+    div.funcsynopsis, code.fieldsynopsis, div.refsect2 div.refsynopsisdiv {
+      background-color: @mantle;
+      border-color: @overlay0;
     }
   }
 }
