Add disclaimer thing (request from someone.)
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -653,6 +653,11 @@
     --theme-dc-color-claude-bg: @green !important;
     --theme-dc-color-claude-main: @green !important;
     --theme-dc-color-container-message: @surface0 !important;
+    // You've reached the maximum chat length! Ewwww AI
+    --theme-dc-color-disclaimer: @red !important;
+    .iLf2hISmPJ5CaPQbrtym * {
+      color: @base !important;
+    }
     --theme-dc-color-fire-button: fade(@red, 40%) !important;
     --theme-dc-color-gpt-bg: @mauve !important;
     --theme-dc-color-gpt-main: @mauve !important;
