--- a/lib/lib.less
+++ b/lib/lib.less
@@ -15,7 +15,7 @@
 };
 
 #lib {
-  .palette() {
+  .palette(@rgbify-default-sep: "comma", @hslify-default-sep: "comma") {
     @rosewater: @catppuccin[@@flavor][@rosewater];
     @flamingo: @catppuccin[@@flavor][@flamingo];
     @pink: @catppuccin[@@flavor][@pink];
@@ -88,14 +88,42 @@
     }
   }
 
-  .rgbify(@color) {
-    @rgb: red(@color), green(@color), blue(@color);
+  // rgbify()
+  & when (@rgbify-default-sep = "comma") {
+    .rgbify(@color, @spaces: false) {
+      @with-spaces: red(@color) green(@color) blue(@color);
+      @with-commas: red(@color), green(@color), blue(@color);
+      @result: if(@spaces = true, @with-spaces, @with-commas);
+    }
+  }
+  & when (@rgbify-default-sep = "space") {
+    .rgbify(@color, @commas: false) {
+      @with-spaces: red(@color) green(@color) blue(@color);
+      @with-commas: red(@color), green(@color), blue(@color);
+      @result: if(@commas = true, @with-commas, @with-spaces);
+    }
   }
 
-  .hslify(@color) {
-    @raw: e(
-      %("%s, %s%, %s%", hue(@color), saturation(@color), lightness(@color))
-    );
+  // hslify()
+  & when (@hslify-default-sep = "comma") {
+    .hslify(@color, @spaces: false) {
+      @result: if(
+        @spaces = true,
+        e(%("%s %s% %s%", hue(@color), saturation(@color), lightness(@color))),
+        e(%("%s, %s%, %s%", hue(@color), saturation(@color), lightness(@color)))
+      );
+    }
+  }
+  & when (@hslify-default-sep = "space") {
+    .hslify(@color, @commas: false) {
+      @result: if(
+        @commas = true,
+        e(
+          %("%s, %s%, %s%", hue(@color), saturation(@color), lightness(@color))
+        ),
+        e(%("%s %s% %s%", hue(@color), saturation(@color), lightness(@color)))
+      );
+    }
   }
 
   .css-variables() {
