--- a/lib/lib.less
+++ b/lib/lib.less
@@ -71,6 +71,58 @@
     @mantle-filter: @catppuccin-filters[@@flavor][@mantle];
     @crust-filter: @catppuccin-filters[@@flavor][@crust];
     @accent-filter: @catppuccin-filters[@@flavor][@@accentColor];
+
+    // rgbify()
+    & when (@rgbify-default-sep = "comma") {
+      .rgbify(@color, @spaces: false) {
+        @with-spaces: red(@color) green(@color) blue(@color);
+        @with-commas: red(@color), green(@color), blue(@color);
+        @result: if(@spaces = true, @with-spaces, @with-commas);
+      }
+    }
+    & when (@rgbify-default-sep = "space") {
+      .rgbify(@color, @commas: false) {
+        @with-spaces: red(@color) green(@color) blue(@color);
+        @with-commas: red(@color), green(@color), blue(@color);
+        @result: if(@commas = true, @with-commas, @with-spaces);
+      }
+    }
+
+    // hslify()
+    & when (@hslify-default-sep = "comma") {
+      .hslify(@color, @spaces: false) {
+        @result: if(
+          @spaces = true,
+          e(
+            %("%s %s% %s%", hue(@color), saturation(@color), lightness(@color))
+          ),
+          e(
+            %(
+              "%s, %s%, %s%",
+              hue(@color),
+              saturation(@color),
+              lightness(@color)
+            )
+          )
+        );
+      }
+    }
+    & when (@hslify-default-sep = "space") {
+      .hslify(@color, @commas: false) {
+        @result: if(
+          @commas = true,
+          e(
+            %(
+              "%s, %s%, %s%",
+              hue(@color),
+              saturation(@color),
+              lightness(@color)
+            )
+          ),
+          e(%("%s %s% %s%", hue(@color), saturation(@color), lightness(@color)))
+        );
+      }
+    }
   }
 
   .defaults() {
@@ -85,44 +137,6 @@
       &::placeholder {
         color: @subtext0 !important;
       }
-    }
-  }
-
-  // rgbify()
-  & when (@rgbify-default-sep = "comma") {
-    .rgbify(@color, @spaces: false) {
-      @with-spaces: red(@color) green(@color) blue(@color);
-      @with-commas: red(@color), green(@color), blue(@color);
-      @result: if(@spaces = true, @with-spaces, @with-commas);
-    }
-  }
-  & when (@rgbify-default-sep = "space") {
-    .rgbify(@color, @commas: false) {
-      @with-spaces: red(@color) green(@color) blue(@color);
-      @with-commas: red(@color), green(@color), blue(@color);
-      @result: if(@commas = true, @with-commas, @with-spaces);
-    }
-  }
-
-  // hslify()
-  & when (@hslify-default-sep = "comma") {
-    .hslify(@color, @spaces: false) {
-      @result: if(
-        @spaces = true,
-        e(%("%s %s% %s%", hue(@color), saturation(@color), lightness(@color))),
-        e(%("%s, %s%, %s%", hue(@color), saturation(@color), lightness(@color)))
-      );
-    }
-  }
-  & when (@hslify-default-sep = "space") {
-    .hslify(@color, @commas: false) {
-      @result: if(
-        @commas = true,
-        e(
-          %("%s, %s%, %s%", hue(@color), saturation(@color), lightness(@color))
-        ),
-        e(%("%s %s% %s%", hue(@color), saturation(@color), lightness(@color)))
-      );
     }
   }
 
