Push checkbox container.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -1077,6 +1077,11 @@
       }
     }
 
+    // Used by, well, checkbox containers :P
+    [class*="Checkbox__Container-sc"] {
+      border-color: @overlay0 !important;
+    }
+
     // REVIEW TOGGLES
     .checkableTags [class*="CheckableTag"] {
       // UNCHECKED
