--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -54,16 +54,44 @@
       background-color: @blue;
     }
 
+    .bg-blue-50 {
+      background-color: rgba(#lib.rgbify(@blue) [], 0.25);
+    }
+
+    .border-blue-300 {
+      border-color: @blue !important;
+    }
+
+    .text-blue-400 {
+      color: @blue;
+    }
+
     .bg-site-orange {
       background-color: @peach !important;
     }
 
-    .bg-brand-primary, .bg-brand-primary-400, .hover\:bg-brand-primary:hover, .MS-Wrapper .lrn-assess .items .progress span {
+    .bg-brand-primary, .bg-brand-primary-400, .MS-Wrapper .lrn-assess .items .progress span, .bg-brand-primary-300 {
       background-color: @mauve !important;
     }
 
-    .bg-brand-secondary-700, .bg-brand-secondary-400, .hover\:bg-brand-secondary-300\/20:hover {
+    .bg-brand-primary-300:hover, .hover\:bg-brand-primary:hover {
+      background-color: darken(@mauve, 5%) !important;
+    }
+
+    .bg-brand-secondary, .bg-brand-secondary-700, .bg-brand-secondary-400, .hover\:bg-brand-secondary-300\/20:hover {
       background-color: @blue;
+    }
+
+    .bg-brand-secondary-800 {
+      background-color: @blue;
+    }
+
+    .bg-brand-secondary-400\/10 {
+      background-color: rgba(#lib.rgbify(@blue) [], 0.5);
+    }
+
+    .bg-gray-50 {
+      background-color: @base;
     }
 
     .bg-gray-200 {
@@ -97,12 +125,28 @@
       color: @text;
     }
 
-    .text-white, .text-gray-600, .text-gray-700, .text-gray-800, .lrn {
+    .text-white, .text-gray-600, .text-gray-700, .text-gray-800, .text-gray-900, .lrn, .text-base, .text-site-black {
       color: @text !important;
+    }
+
+    .hover\:text-gray-100 {
+      color: @base !important;
+    }
+
+    .text-black-333 {
+      color: @subtext0;
+    }
+
+    footer [class*="text-white"], #ribbon[class*="text-white"], button[class*="text-gray-600"]:hover {
+      color: @base !important;
     }
 
     .text-gray-500 {
       color: @subtext0;
+    }
+
+    .text-green-600 {
+      color: @green;
     }
 
     button[class*="text-white"], li[class*="text-white"] {
