Add notification stuff.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -1865,10 +1865,20 @@
     .notificationContent
       .textSectionContainer
       .textSectionContents
-      .textSection
-      .notificationTitle
-      a {
-      color: @accent !important;
+      .textSection {
+      .notificationTitle {
+        a {
+          color: @accent !important;
+        }
+
+        .inlineSubtitle {
+          color: @subtext0 !important;
+        }
+      }
+
+      .notificationSubtitle {
+        color: @subtext0 !important;
+      }
     }
 
     // READ NOTIFICATIONS
